# runsheet-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTES.md  README.md  SECURITY.md  llms.txt  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/runsheet/: __init__.py  _collections.py  _combinator_base.py  _combinators.py  _distribute.py  _errors.py  _internal.py  _middleware.py  _pipeline.py  _result.py  _rollback.py  _step.py
tests/: test_choice.py  test_distribute.py  test_errors.py  test_filter.py  test_flat_map.py  test_map.py  test_middleware.py  test_parallel.py  test_pipeline.py  test_reentrancy.py  test_result.py  test_rollback.py  test_step.py  test_when.py
